--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
         <span class="text-wrapperz text-center">
           <span class="letterz">HARI RAYA IDUL FITRI 1444H</span>
         </span>
+        <br>
+        <span class="text-wrapperz text-center">
+          <span class="letterz">MINAL AIDIN WAL FAIZIN</span>
+        </span>
+        <br>
+        <span class="text-wrapperz text-center">
+          <span class="letterz">MOHON MAAF LAHIR DAN BATHIN</span>
+        </span>
       </h1>
+      <h4>
+        <span class="text-wrapperz text-center">
+          <span class="letterz">Dari : Bagus Budi Satoto</span>
+        </span>
+      </h4>
     </div>
 
     <img src="bedug.webp" class="bedug">
