--- a/index.html
+++ b/index.html
@@ -29,21 +29,14 @@
         <br>
         <span class="text-wrapperz text-center">
           <span class="letterz">HARI RAYA IDUL FITRI 1444H</span>
-        </span>
-        <br>
-        <span class="text-wrapperz text-center">
-          <span class="letterz">MINAL AIDIN WAL FAIZIN</span>
-        </span>
-        <br>
-        <span class="text-wrapperz text-center">
-          <span class="letterz">MOHON MAAF LAHIR DAN BATHIN</span>
-        </span>
       </h1>
-      <h4>
+      <br>
+      
+      <h3 class="ml10">
         <span class="text-wrapperz text-center">
           <span class="letterz">Dari : Bagus Budi Satoto</span>
         </span>
-      </h4>
+      </h3>
     </div>
 
     <img src="bedug.webp" class="bedug">
