--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html translate="no">
+<html translate="yes">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=7">
-  <title>Selamat Hari Raya Idul Fitri 1444H</title>
+  <title>Selamat Hari Raya Idul Fitri 1445H</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="google" content="notranslate">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TweenMax.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
@@ -28,11 +28,11 @@
         </span>
         <br>
         <span class="text-wrapperz text-center">
-          <span class="letterz">HARI RAYA IDUL FITRI 1444H</span>
+          <span class="letterz">HARI RAYA IDUL FITRI 1445H</span>
       </h1>
     </div>
 
-    <img src="bedug.webp" class="bedug">
+    <img src="./assest/bedug.webp" class="bedug">
   </div>
 
 
@@ -43,7 +43,7 @@
     const fireworks = new Fireworks.default(container)
     fireworks.start()
   </script>
-  <script src="script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
